2004-09-10  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Added support for hierarchical methods: methods
	* snit.test     with submethods.  The documentation has not yet
	* README.txt    been updated.

2004-09-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Bug fix: read-only options were read-only only
	* snit.test     if they weren't set at creation time; the 
	* README.txt    configure cache wasn't being cleared properly
	                after creation.

2004-08-28  Will Duquette  <will@wjduquette.com>

	* snit.tcl:     Minor tweaks to instance creation to improve
	* dictionary    speed.  No major gain.  Also, -simpledispatch yes
	* snit.man	now supports instance renaming again.
	* snitfaq.man
	

2004-08-22  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Defined the -simpledispatch pragma.  Updated
	* snit.test     the test suite and the relevant documentation.
	* snit.man
	* README.txt
	* snitfaq.man
	* dictionary

2004-08-14  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Defined the -hastypemethods pragma, and added
	* snit.test     relevant tests and documentation.
	* snit.man      
	* README.txt
	* snitfaq.man

2004-08-12  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Under appropriate conditions, calling a
	* snit.test     snit::type command with no arguments will create
	* snit.man      an instance with an automatically generated name.
	* README.txt

2004-08-11  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Added the -hasinfo pragma, along with the
	* snit.test     appropriate tests.  Updated documentation.
	* snit.man
	* README.txt

	* snit.tcl      The "configure", "configurelist" and "cget"
	* snit.test     instance methods, along with the "options"
	* snit.man      instance variable, are defined only if the
	* README.txt    type defines at least one option (either
	                locally or by delegation).

2004-08-07  Will Duquette  <will@wjduquette.com>
